<resources>
    <string name="app_name">WeatherApp</string>
    <string name="title_weather">Weather</string>
    <string name="title_details">Details</string>
    <string name="title_forecast">Forecast</string>
    <string name="title_settings">Settings</string>
    <string name="weather_icon">WeatherIcon</string>
    <string name="temperature_format">Temperature: %1$.1f%2$s</string>
    <string name="feels_like_format">Feels like: %1$.1f%2$s</string>
    <string name="city">City</string>
    <string name="units">Units</string>
    <string name="standard">Standard</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="save">Save</string>
    <string name="favourite_icon">Favourite Icon</string>
    <string name="favourite_cities">Favourite cities</string>
    <string name="choose_city">Choose a city</string>
    <string name="day_format">Day: %1$s</string>
    <string name="description_format">Description: %1$s</string>
</resources>