<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/weather_data">

    <fragment
        android:id="@+id/weather_data"
        android:name="com.example.weatherapp.ui.weather_data.WeatherDataFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather_data" />

    <fragment
        android:id="@+id/weather_details"
        android:name="com.example.weatherapp.ui.weather_details.WeatherDetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_weather_details" />

    <fragment
        android:id="@+id/weather_forecast"
        android:name="com.example.weatherapp.ui.weather_forecast.WeatherForecastFragment"
        android:label="@string/title_forecast"
        tools:layout="@layout/fragment_weather_forecast" />

</navigation>