<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/chooseCity"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_city"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <SearchView
        android:id="@+id/searchView"
        android:iconifiedByDefault="false"
        android:queryHint="Search..."

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/chooseCity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecyclerView"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/favoriteCitiesLabel"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favourite_cities"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@id/searchRecyclerView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoriteCitiesList"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/favoriteCitiesLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/units"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/units"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@id/favoriteCitiesList"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <RadioGroup
        android:id="@+id/unitsRadioGroup"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/units"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <RadioButton
            android:id="@+id/standardUnits"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/standard"
            />

        <RadioButton
            android:id="@+id/metricUnits"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/metric"
            />

        <RadioButton
            android:id="@+id/imperialUnits"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/imperial"
            />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>