<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/favoriteCitiesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ulubione miasta:"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoriteCitiesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/favoriteCitiesLabel"
        app:layout_constraintBottom_toTopOf="@id/unitsLabel" />

    <TextView
        android:id="@+id/unitsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jednostki_miary"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/unitsRadioGroup"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/unitsRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:id="@+id/standardUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/standard" />

        <RadioButton
            android:id="@+id/metricUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metric" />

        <RadioButton
            android:id="@+id/imperialUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imperial" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout> 